objects/ssot__ForecastingType__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CanDisplayQuotas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Display Quotas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastingGroupId__c</fullName>
        <label>Forecasting Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastingRoleType__c</fullName>
        <label>Forecasting Role Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasAdjustments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Adjustments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HasOwnerAdjustments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Owner Adjustments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HasProductFamily__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Product Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Forecasting Type Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsCdp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cdp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPlatformType__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Platform Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Language__c</fullName>
        <label>Language</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastActivatedDateTime__c</fullName>
        <label>Last Activated DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MasterLabelText__c</fullName>
        <label>Master Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modstamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
</CustomObject>